test : 자동차 이름을 CarName VO로 포장함에 따른 테스트 코드 리펙토링