@@ -5,11 +5,11 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import racingcar.vo.CarName;
 
 class CarsTest {
 
@@ -19,14 +19,15 @@ class CarsTest {
     @Test
     void carListImmutability_test() {
         // given
-        List<String> carNames = List.of("Car1", "Car2", "Car3");
+        List<CarName> carNames = Arrays.asList(new CarName("Car1"), new CarName("Car2"), new CarName("Car3"));
         cars = new Cars(carNames);
 
         // when
         List<Car> carList = cars.getCarList();
+        CarName carName = new CarName("Car4");
 
         // then
-        assertThrows(UnsupportedOperationException.class, () -> carList.add(new Car("Car4")));
+        assertThrows(UnsupportedOperationException.class, () -> carList.add(new Car(carName)));
         assertThrows(UnsupportedOperationException.class, () -> carList.remove(0));
         assertEquals(3, carNames.size());
     }
@@ -35,7 +36,7 @@ class CarsTest {
     @DisplayName("자동차 이름이 유효한 경우 객체 생성를 생성한다.")
     @Test
     void constructorValidInput_test() {
-        List<String> carNames = Arrays.asList("Car1", "Car2", "Car3");
+        List<CarName> carNames = Arrays.asList(new CarName("Car1"), new CarName("Car2"), new CarName("Car3"));
 
         assertDoesNotThrow(() -> new Cars(carNames));
     }
@@ -43,7 +44,7 @@ class CarsTest {
     @DisplayName("자동차 이름 중 빈 값이 있는 경우 예외를 던져 객체 생성을 막는다.")
     @Test
     void constructorInvalidInput_exception_test() {
-        List<String> emptyCarNames = Arrays.asList("", "pobi");
+        List<CarName> emptyCarNames = Arrays.asList(new CarName("pobi"), new CarName(""));
 
         assertThrows(IllegalArgumentException.class, () -> new Cars(emptyCarNames));
     }
@@ -51,19 +52,16 @@ class CarsTest {
     @DisplayName("자동차 이름 중 중복이 있는 경우 예외를 던져 객체 생성을 막는다.")
     @Test
     void constructorDuplicateInput_exception_test() {
-        List<String> emptyCarNames = Arrays.asList("pobi", "pobi");
+        List<CarName> duplicateCarNames = Arrays.asList(new CarName("pobi"), new CarName("pobi"));
 
-        assertThrows(IllegalArgumentException.class, () -> new Cars(emptyCarNames));
+        assertThrows(IllegalArgumentException.class, () -> new Cars(duplicateCarNames));
     }
 
     @DisplayName("자동차의 목록을 List형태로 가져온다.")
     @Test
     void getCarList_test() {
         // given
-        List<String> carNames = new ArrayList<>();
-        carNames.add("Car1");
-        carNames.add("Car2");
-        carNames.add("Car3");
+        List<CarName> carNames = Arrays.asList(new CarName("Car1"), new CarName("Car2"), new CarName("Car3"));
         cars = new Cars(carNames);
 
         // when
